# shortener

./: .gitignore  create_schema.sql  functions.sql  shortener.cabal
client/elm/: Client.elm  elm-package.json  index.html  make.sh  style.css
client/html/: api.js  index.html
server/: create_schema.sql  functions.sql  shortener.cabal
server/src/Shortener/: Converter.hs  DataAccess.hs  UserManagement.hs
server/src/Shortener/Web/Access/: Main.hs
server/src/Shortener/Web/Api/: Main.hs
snaplets/ald.li data access/snaplets/postgresql-simple/: devel.cfg
src/: Main.hs  converter.hs  shortener.hs
src/Shortener/: Converter.hs  DataAccess.hs  UserManager.hs
src/Shortener/Web/Access/: Main.hs
src/Shortener/Web/Api/: Main.hs
