Name:                shortener
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable shortener
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4.4      && < 10,
    bytestring                >= 0.9.1 && < 0.11,
    containers                >= 0.0,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    time,
    lens                      >= 3.7.6 && < 3.11,
    mtl                       >= 2     && < 3,
    snap                      >= 0.11 && < 14,
    snap-core                 >= 0.9 && < 14,
    snap-server               >= 0.9 && < 14,
    snaplet-postgresql-simple

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
